product_docs/docs/pgaa/1.11/reference/data_types.mdx
---
title: Data types and definitions
navTitle: Data types and definitions
description: Supported Postgres types and internal PGAA state definitions.
---

The EDB Analytics Accelerator (PGAA) maps native Postgres data types to optimized columnar formats in the data lake. This page lists the supported types and defines the status codes found in PGAA administrative views.

## Data types

PGAA independently manages how data is read into Postgres and how it is written to the data lake (using PGD integration). This architecture maximizes performance while ensuring broad compatibility for complex or unsupported formats.

**Reading from analytics**

When you query a PGAA table, the engine retrieves data from the lakehouse and attempts to coerce it into the target Postgres type defined in your schema. Native binary data is mapped directly to Postgres types for maximum efficiency, while other types are coerced back into its target type using internal Postgres conversion functions.

| Natively Supported  | Coerced  |
| --- | --- |
| `BOOLOID` | `CSTRINGOID` |
| `BYTEAOID` | `TEXTOID` |
| `CHAROID`  | `VARCHAROID` |
| `INT2OID`  | `BPCHAROID` |
| `INT4OID`  | `JSONOID` |
| `INT8OID`  | `JSONBOID` |
| `OIDOID` | `UUIDOID` |
| `FLOAT4OID`  | `ANYENUMOID` |
| `FLOAT8OID`  | `CSTRINGARRAYOID` |
| `NUMERICOID` | `TEXTARRAYOID` |
| `DATEOID` | `VARCHARARRAYOID` |
| `TIMESTAMPOID` | `BPCHARARRAYOID` |
| `TIMESTAMPTZOID` | `UUIDARRAYOID` |
| `INTERVALOID` | **Any other type**  |
| `BOOLARRAYOID` | |
| `INT2ARRAYOID` | |
| `INT4ARRAYOID` | |
| `INT8ARRAYOID` | |
| `FLOAT4ARRAYOID` | |
| `FLOAT8ARRAYOID` | |
| `DATEARRAYOID` | |
| `TIMEARRAYOID` | |
| `TIMESTAMPARRAYOID` | |
| `TIMESTAMPTZARRAYOID` | |
| `NUMERICARRAYOID` | |


**Writing to analytics**

When replicating data to the data lake (using PGD integration), PGAA utilizes native binary builders for maximum efficiency. If a column type is encountered that is not natively supported by the underlying storage format, PGAA automatically converts it to a UTF-8 text representation to ensure a consistent and reliable write.

| Natively supported | Converted to UTF-8 text |
| :--- | :--- |
| `BOOLOID` | `CSTRINGOID` |
| `BYTEAOID` | `TEXTOID` |
| `CHAROID`  | `VARCHAROID` |
| `INT2OID`  | `BPCHAROID` |
| `INT4OID` | `JSONOID` |
| `INT8OID` | `JSONBOID` |
| `OIDOID` | `UUIDOID` |
| `FLOAT4OID` | `ANYENUMOID` |
| `FLOAT8OID` | `CSTRINGARRAYOID` |
| `TIMESTAMPOID` | `TEXTARRAYOID` |
| `TIMESTAMPTZOID` | `VARCHARARRAYOID` |
| `DATEOID` | `BPCHARARRAYOID` |
| `INTERVALOID` | `UUIDARRAYOID` |
| `NUMERICOID` | **All other types** |
| `BOOLARRAYOID` | |
| `INT2ARRAYOID` | |
| `INT4ARRAYOID` | |
| `INT8ARRAYOID` | |
| `FLOAT4ARRAYOID` | |
| `FLOAT8ARRAYOID` | |
| `DATEARRAYOID` | |
| `TIMEARRAYOID` | |
| `TIMESTAMPARRAYOID` | |
| `TIMESTAMPTZARRAYOID` | |
| `NUMERICARRAYOID` | |


## Administrative enums and statuses

The following parameters and values are primarily found in PGAA administrative views. The table lists their description and supported values.

| Type      | Supported values    | Description | 
| --------- | ------------------- | ----------- |
| `pgaa.table_format` | `delta`, `iceberg`, and `parquet`. | The storage format of the table in object storage.  | 
| `pgaa.catalog_type` | `iceberg-rest` (Iceberg REST catalog), and `iceberg-s3tables` (AWS S3 Tables). | The type of catalog service. | 
| `pgaa.catalog_status` | `detached`, `attached`, `refresh_retry`, and `refresh_failed`. | The current synchronization health between Postgres and the catalog. | 
|  `pgaa.replication_status` | `disabled`, `initial_offload`, and `enabled`. | The state of data movement for Tiered Tables. | 
| `pgaa.task_status` | `pending`, `running`, `success`, and `failure`. | The lifecycle state of background worker tasks. | 
